# ROOSTER

./: .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  STATUS.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py  core.py  eval.py  main.py  ml.py  rooster.py  synth.py
scripts/: benchmark.py
static/: app.js  index.html  style.css
tests/: test_core.py  test_ml.py  test_synth.py
